--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -9,28 +9,27 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  cloud_firestore:
-  json_annotation:
+  cupertino_icons: ^1.0.6 
+  cloud_firestore: ^5.6.5
+  json_annotation: ^4.5.0
   responsive_builder: ^0.7.0
-  device_preview: 
-  get: 
-  http: 
-  translator: 
-  flutter_dotenv: 
-  flutter_form_builder:
-  form_builder_validators:
-  intl: 
-  logger:
-  mocktail: 
-  syncfusion_flutter_charts: 
-  table_calendar: 
-  
-
-  firebase_core: ^3.11.0 
-  firebase_auth: ^5.4.2 
+  device_preview: ^1.2.0
+  get: ^4.6.5
+  http: ^1.3.0
+  translator: ^1.0.3+1
+  flutter_dotenv: ^5.0.2
+  flutter_form_builder: ^9.7.0
+  form_builder_validators: ^11.1.2
+  intl: ^0.19.0
+  logger: ^2.5.0
+  mocktail: any
+  syncfusion_flutter_charts: ^29.1.33
+  table_calendar: ^3.0.2
+  firebase_core: ^3.11.0
+  firebase_auth: ^5.4.2
   in_app_review: ^2.0.9
   flutter_card_swiper: ^7.0.1
-  infinite_scroll_pagination: ^4.0.0
+  infinite_scroll_pagination: ^5.0.0
   pdf: ^3.10.8
   google_fonts: ^6.2.1
   url_launcher: ^6.3.0
@@ -41,47 +40,25 @@ dependencies:
   carousel_slider: ^5.0.0
   visibility_detector: ^0.4.0+2
   animated_text_kit: ^4.2.2
- 
   razorpay_flutter: ^1.3.4
   google_sign_in: ^6.2.2
   cached_network_image: ^3.4.1
 
-  
-  
-  
-
-
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  flutter_lints: 
-  build_runner:
-  json_serializable: 
+  flutter_lints: ^5.0.0
+  build_runner: ^2.0.0
+  json_serializable: ^6.1.5
 
 flutter:
   uses-material-design: true
   assets:
-    #- .enV
-    #- assets/google_logo.png
-    #- assets/facebook_logo.png
-    
     - assets/
     - assets/images/
     - assets/background/
     - assets/logo/
     - assets/features/
     - assets/products/
-   
 
 
-
-fonts:
-    - family: Montserrat
-      fonts:
-        - asset: assets/fonts/Montserrat-Bold.ttf
-        - asset: assets/fonts/Montserrat-Light.ttf
-        - asset: assets/fonts/Montserrat-Medium.ttf
-        - asset: assets/fonts/Montserrat-Regular.ttf
-        - asset: assets/fonts/Montserrat-SemiBold.ttf
-      
-    
